src/App.css
.App-header {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-family: 'Comfortaa', sans-serif;
  font-weight: lighter;
  font-size: calc(10px + 2vmin);
  text-align: center;
  color: #b7b8d2;
}

#main-header {
    font-family: 'Urbanist', sans-serif;
    font-weight: lighter;
    letter-spacing: 50px;
}

#intro {
    color: #837ba2;
}

#header-pic {
    width: 200px;
    border-radius: 50%;
    background-color: rgba(168, 140, 198, 0.05);
}

.gallery-container {
    color: #a9dcfe;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding-top: 15vh;
}

.socials-list {
    list-style-type: none;
    display: block;
}

.gallery {
    text-align: left;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.gallery-list {
    /* opacity: 0.5; */
    list-style-type: none;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    padding-left: 0px;
    width: 100%;
}

/* .gallery-layer {
    opacity: 0.5;
} */

.gallery-list li {
    display: inline;
    flex-wrap: wrap;
    position: relative;
}

.gallery-list a {
    color: inherit;
}

.circle {
    height: 200px;
    width: 200px;
    /* background-color: rgba(79, 80, 113, 0.6); */
    /* background-color: rgba(94, 79, 113, 0.6); */
    /* background-color: rgba(52, 43, 62, 0.6); */
    background-color: rgba(52, 43, 62, 0.6);
    border-radius: 50%;
    text-align: center;
    margin: 20px;
    padding: 20px;
}

.circle img {
    padding-top: 30px;
}

.gallery-text {
    max-width: 175px;
    margin-left: 55px;
    margin-top: 110px;
    position: absolute;
    top: 0;
    left: 0;
    text-align: center;
    /* color: #bddff5; */
    color: #FAF9F6;
    text-shadow: 1px 1px 1px black;
    font-weight: 650;
    font-size: 20px;
    opacity: 0;
    transition: opacity 0.25s;
    transition-timing-function: ease-in-out;
    
}

.overlay {
    transition: opacity 0.25s;
    transition-timing-function: ease-in-out;
    position: absolute;
    /* background-color: #99cde0b4;  */
    background-color: #464d68;
    opacity: .2;
    top: 20px;
    left: 20px;
    width: 240px;
    height: 240px;
    border-radius: 50%;
}

a:hover .gallery-text {
    opacity: 1;
    transition: opacity 0.5s;
    transition-delay: 0.25s;
    transition-timing-function: ease-in-out;
}

img {
    opacity: 0.8;
    transition: opacity 0.5s;
    transition-delay: 0.25s;
    transition-timing-function: ease-in-out;
}

a:hover img {
    opacity: 0;
    transition: opacity 0.25s;
    transition-timing-function: ease-in-out;
}

a:hover .overlay {
    opacity: 0;
    transition: opacity 0.5s;
    transition-delay: 0;
    transition-timing-function: ease-in-out;
}

.underline {
    position: relative;
    width: 150px;
    height: 2px;
    background-color: #414466;
    border-radius: 10px;
}

